--- a/vue_gymcoding/package.json
+++ b/vue_gymcoding/package.json
@@ -10,6 +10,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.5",
     "vue": "^3.2.47"
   },
   "devDependencies": {
